--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -66,7 +66,7 @@
         <input
           id="form-button"
           class="btn btn-success btn-block"
-          typle="submit"
+          type="submit"
           value="Continue"
         />
       </form>
