--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -74,6 +74,7 @@
     <br />
     <div class="box-element hidden" id="payment-info">
       <small>Paypal Options</small>
+      <button id="make-payment">Make Payment</button>
     </div>
   </div>
 
@@ -108,6 +109,17 @@
       document.getElementById("shipping-info").innerHTML = "";
     }
 
+    if (user != "AnonymousUser") {
+      document.getElementById("user-info").innerHTML = "";
+    }
+
+    if (shipping == "False" && user != "AnonymousUser") {
+      // Hide entire form if user is loggen in and shipping is false
+      document.getElementById("form-wrapper").classList.add("hidden");
+      // Show payment if logged in user wants to buy an item that does not require shipping
+      document.getElementById("payment-info").classList.remove("hidden");
+    }
+
     var form = document.getElementById("form");
     form.addEventListener("submit", function (e) {
       e.preventDefault();
@@ -115,6 +127,16 @@
       document.getElementById("form-button").classList.add("hidden");
       document.getElementById("payment-info").classList.remove("hidden");
     });
+
+    document
+      .getElementById("make-payment")
+      .addEventListener("click", function (e) {
+        sumbitFormData();
+      });
+
+    function sumbitFormData() {
+      console.log("Payment button clicked");
+    }
   </script>
 
   {% endblock%}
