--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -75,7 +75,12 @@
     <br />
     <div class="box-element hidden" id="payment-info">
       <small>Paypal Options</small>
-      <button id="make-payment">Make Payment</button>
+
+      <!-- 
+        <button id="make-payment">Make Payment</button> 
+      -->
+
+      <div id="paypal-button-container"></div>
     </div>
   </div>
 
@@ -102,6 +107,41 @@
       <h5>Total: ${{order.get_cart_total|floatformat:2}}</h5>
     </div>
   </div>
+
+  <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD&disable-funding=credit"></script>
+  <script>
+    // Render the Paypal button into #paypal-button-container
+    paypal
+      .Buttons({
+        style: {
+          color: "blue",
+          shape: "rect",
+        },
+
+        // Setup the Transaction
+        createOrder: function (data, actions) {
+          return actions.order.create({
+            purchase_units: [
+              {
+                amount: {
+                  value: "0.01",
+                },
+              },
+            ],
+          });
+        },
+        // Finalize the Transaction
+        onApprove: function (data, actions) {
+          return actions.order.capture().then(function (details) {
+            // Show a success message to buyer
+            alert(
+              "Transaction completed by " + details.payer.name.give_name + "!"
+            );
+          });
+        },
+      })
+      .render("#paypal-button-container");
+  </script>
 
   <script type="text/javascript">
     var shipping = "{{order.shipping}}";
@@ -133,11 +173,13 @@
       document.getElementById("payment-info").classList.remove("hidden");
     });
 
+    /*
     document
       .getElementById("make-payment")
       .addEventListener("click", function (e) {
         sumbitFormData();
       });
+      */
 
     function sumbitFormData() {
       console.log("Payment button clicked");
